--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry including="**/*.java" kind="src" path="src/java/vision"/>
 	<classpathentry including="**/*.java" kind="src" path="src/java/tools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry sourcepath="3rdparty/lib/bcel-5.1-src.zip" kind="lib" path="3rdparty/lib/bcel-5.1.jar"/>
+	<classpathentry kind="lib" path="3rdparty/lib/bcel-5.1.jar" sourcepath="3rdparty/lib/bcel-5.1-src.zip"/>
 	<classpathentry kind="lib" path="3rdparty/lib/commons-cli-1.0.jar"/>
 	<classpathentry kind="lib" path="3rdparty/lib/jmf.jar"/>
 	<classpathentry kind="output" path="build/bin"/>
