Updates to address build and clean errors

--- a/src/comms/libjirtrcx/Makefile
+++ b/src/comms/libjirtrcx/Makefile
@@ -14,7 +14,7 @@ IRTRCX_INCL="$(LEJOS_HOME)/src/comms/libirtrcx"
 # Default: Unix
 JIRTRCX = $(BIN_TARGET)/libjirtrcx.so
 CCOPT = -Wall -rdynamic -ldl -shared -fpic \
-	-I${JAVA_INCL} -I${JAVA_INCL}/$(OSTYPE) -I$(IRTRCX_INCL) \
+	-I$(JAVA_INCL) -I$(JAVA_INCL)/$(OSTYPE) -I$(IRTRCX_INCL) \
 	-L$(BIN_TARGET) -lirtrcx
 
 # Windows with CygWin installed
