Address issues related to platform variances

--- a/Makefile.config
+++ b/Makefile.config
@@ -2,11 +2,13 @@
 ## You only need to modify this if you're
 ## going to rebuild tinyvm.srec.
 
-BINDIR = /usr/local/bin
+BINDIR = /usr/bin
 BINPREFIX = h8300-hms-
 JAVA = java
+JAVA_HOME ?= $(JAVA_HOME)
 
 export BINDIR
 export BINPREFIX
 export JAVA
 export CLASSPATH
+export JAVA_HOME
