--- a/src/comms/tools/fastdl/Makefile
+++ b/src/comms/tools/fastdl/Makefile
@@ -41,13 +41,14 @@ fastdl4x.o:
 	$(CC) fastdl.S -o fastdl4x.o -DDISABLE_COMPLEMENTS -DDOUBLE_BAUD_RATE
 
 %.srec: %.o $(PLAT_RCX_SRC)/rcx.lds
-	rm -f *.map *.lds
-	$(LD) $(LFLAGS) -T$(PLAT_RCX_SRC)/rcx.lds -Map rcx.map -o $@ $<
+	rm -f $@.rcx.map $@.rcx.lds
+	$(LD) $(LFLAGS) -T$(PLAT_RCX_SRC)/rcx.lds -Map $@.rcx.map -o $@ $<
 	$(OC) $@
-	${JAVA} -classpath "$(LEJOS_HOME_NATIVE)/lib/jtools.jar" js.tools.CodePacker $(PLAT_RCX_SRC_NATIVE)/rcx.lds rcx.map rcx.lds
+	${JAVA} -classpath "$(LEJOS_HOME_NATIVE)/lib/jtools.jar" js.tools.CodePacker $(PLAT_RCX_SRC_NATIVE)/rcx.lds $@.rcx.map $@.rcx.lds
 	# Sleeping briefly: LD sometimes fails with "no input file" error, even though the file is there when checking manually
-	sleep 1
-	$(LD) $(LFLAGS) -Trcx.lds -o $@
+	for i in {0..9}; do if [ -f $@.rcx.lds ]; then echo "Found $@.rcx.lds" && break; else echo "$i...waiting for $@.rcx.lds"; fi; done
+	if [ ! -f $@.rcx.lds ]; then echo "Timed out waiting for $@.rcx.lds"; fi;
+	$(LD) $(LFLAGS) -T$@.rcx.lds -o $@
 	$(OC) $@
 
 clean:
