Update README and Enable building of the firmware by default

--- a/build.properties
+++ b/build.properties
@@ -11,5 +11,5 @@ lejos.compiler=gcc
 trace=-DTRACE
 #trace=
 
-# uncomment this to create firmware from scratch also (optional, might require a particular system configuration)
-#build.lejos.firmware
+# uncomment this to create firmware from scratch also (optional, requires h8300 cross-compiler toolchain)
+build.lejos.firmware
