Address CodePacker issue of randomly generating an invalid output file

--- a/src/comms/tools/fastdl/Makefile
+++ b/src/comms/tools/fastdl/Makefile
@@ -45,11 +45,7 @@ fastdl4x.o:
 	$(LD) $(LFLAGS) -T$(PLAT_RCX_SRC)/rcx.lds -Map $@.rcx.map -o $@ $<
 	$(OC) $@
 	${JAVA} -classpath "$(LEJOS_HOME_NATIVE)/lib/jtools.jar" js.tools.CodePacker $(PLAT_RCX_SRC_NATIVE)/rcx.lds $@.rcx.map $@.rcx.lds
-	# Every once in a while, CodePacker doesn't run correctly,
-	#  and the generated rcx.lds file is missing the added (.text) section
-	#  between the __extra_start and __extra_end lines.
-	#  The "packing size" value output by CodePacker is also usually 0 in these cases.
-	#  A clean and rebuild, with no other changes, usually succeeds.
+	# If the "packing size" value output above by CodePacker is 0, ld below will fail
 	$(LD) $(LFLAGS) -T$@.rcx.lds -o $@
 	$(OC) $@
 
